# shutters-service

./: Cargo.toml  README.md
deploy/: manage_service.sh  shutters-service.service
src/: main.rs
src/house/: house.rs  mod.rs
src/shutter/: driver.rs
src/weather/: mod.rs  openweather.rs
